feat: embedded svm
feat(cli): add `native-image` adapter and tool
feat(cli): `gvm` resources for end-user native images
feat(tooling): add native image configuration for `elide.pkl`
feat(tooling): contribute sensible base flags to native-image
chore: add jars needed for svm builder
chore: native image metadata for svm builder
chore: gitignore for `java` sample project

Signed-off-by: Sam Gammon <sam@elide.dev>